--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -97,7 +97,7 @@
                                     </div>
                                     <div class="d-flex flex-column justify-content-center">
                                         <span class="text-primary">Have any questions?</span>
-                                        <span class="text-secondary fw-bold fs-5" style="letter-spacing: 2px;">Free: +90 533 874 23 95</span>
+                                        <span class="text-secondary fw-bold fs-5" style="letter-spacing: 2px;">Free: +252 614 83 0002</span>
                                     </div>
                                 </div>
                             </div>
